# FactorioManager

./: .gitignore  DEV_NOTES.md  FactorioModManager.iss  FactorioModManager.spec  INSTALL_INSTRUCTIONS.txt  LICENSE  README.md  pyproject.toml  requirements.txt
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  FEATURES.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/00-pre-migration-cleanup/: 00-01-PLAN.md  00-UAT.md  (+7 more)
factorio_mod_manager/: __init__.py  main.py
factorio_mod_manager/core/: __init__.py  checker.py  dependency_graph.py  downloader.py  mine.md  mod.py  mod_list.py  portal.py  profiles.py  queue_models.py  update_guidance.py
factorio_mod_manager/ui/: __init__.py  checker_logic.py  checker_presenter.py  checker_tab.py  download_coordinator_job.py  download_queue_job.py  downloader_tab.py  filter_sort_bar.py  logger_tab.py  main_window.py  mod_details_dialog.py  profile_apply_dialog.py  profile_apply_job.py  profile_editor_dialog.py  profile_library_dialog.py  profile_save_dialog.py  queue_controller.py  queue_drawer.py  queue_strip.py  search_bar.py  settings_page.py  status_manager.py  update_queue_job.py  widgets.py
factorio_mod_manager/utils/: __init__.py  config.py  helpers.py  logger.py
tests/core/: test_checker_mod_state.py  test_dependency_graph.py  test_mod_list.py  test_profile_apply.py  test_profiles.py  test_queue_models.py  test_update_guidance.py
tests/ui/: test_download_queue_job.py  test_queue_controller.py
(+76 files in other folders)
