[tool.poetry]
name = "factorio-mod-manager"
version = "1.0.0"
description = "A comprehensive Factorio mod manager with download and update capabilities"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "factorio_mod_manager"}]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.0"
beautifulsoup4 = "^4.12.0"
selenium = "^4.25.0"
pillow = "^10.1.0"
python-dotenv = "^1.0.0"
lxml = "^4.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.12.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
factorio-mod-manager = "factorio_mod_manager.main:main"
